# backend-ai

./: pyproject.toml
app/: main.py
app/api/: dependencies.py
app/core/: config.py
app/db/: session.py
app/models/: user.py
